tests/ui/sized/missing-sized-not-panic.stderr
error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/missing-sized-not-panic.rs:5:5
   |
LL |     Missing: Sized,
   |     ^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
